ADD_LIBRARY( Rom
  BasisBinaryFile.C
  BasisId.C
  BasisFileStream.C
  BasisInputFile.C
  BasisOutputFile.C
  BasisOrthoDriver.C
  CheckNonLinDynamic.C
  CholeskyUtils.C
  DistrBasisFile.C
  DistrBasisOrthoDriver.C
  DistrElementSamplingDriver.C
  DistrSnapshotNonLinDynamic.C
  DistrExplicitSnapshotNonLinDynamic.C
  DistrExplicitPodProjectionNonLinDynamicBase.C
  DistrExplicitPodProjectionNonLinDynamic.C
  DistrExplicitLumpedPodProjectionNonLinDynamic.C
  DistrROMPostProcessingDriver.C
  DistrNodeDof6Buffer.C
  DistrVecBasis.C
  DistrSvdOrthogonalization.C
  DistrVecNodeDof6Conversion.C
  ElementSamplingDriverInstance.C
  SubElementSamplingDriver.C
  FileNameInfo.C
  LumpedPodProjectionNonLinDynamic.C
  SparseNonNegativeLeastSquaresSolverInstance.C
  NodalRestrictionMapping.C
  MappedNodeDof6Buffer.C
  MeshOutput.C
  MeshDesc.C
  ModalGeomState.C
  PodProjectionNonLinDynamic.C
  SnapshotProjectionDriver.C
  RenumberingUtils.C
  RestrictedVecNodeDof6Conversion.C
  SnapshotNonLinDynamic.C
  SvdOrthogonalization.C
  VecBasis.C
  VecBasisFile.C
  VecBasisUtils.C
  VecNodeDof6Conversion.C
  VecNodeDof6Map.C
  DofSetUtils.C
  LawsonHanson.d/diff.cpp
  LawsonHanson.d/g1.cpp
  LawsonHanson.d/h12.cpp
  LawsonHanson.d/spnnls.cpp
)
