ADD_LIBRARY( Rom
  BasisBinaryFile.C
  BasisId.C
  BasisFileStream.C
  BasisInputFile.C
  BasisOutputFile.C
  BasisOrthoDriver.C
  DEIMSamplingDriver.C 
  UDEIMSamplingDriver.C
  CheckNonLinDynamic.C
  CholeskyUtils.C
  DistrBasisFile.C
  DistrBasisOrthoDriver.C
  DistrElementSamplingDriver.C
  DistrSnapshotNonLinDynamic.C
  DistrExplicitSnapshotNonLinDynamic.C
  DistrExplicitPodProjectionNonLinDynamicBase.C
  DistrExplicitPodProjectionNonLinDynamic.C
  DistrExplicitLumpedPodProjectionNonLinDynamic.C
  DistrExplicitDEIMPodProjectionNonLinDynamic.C
  DistrExplicitUDEIMPodProjectionNonLinDynamic.C
  DistrROMPostProcessingDriver.C
  DistrNodeDof6Buffer.C
  DistrVecBasis.C
  DistrSvdOrthogonalization.C
  DistrVecNodeDof6Conversion.C
  ElementSamplingDriverInstance.C
  FileNameInfo.C
  SubElementSamplingDriver.C
  LumpedPodProjectionNonLinDynamic.C
  DEIMPodProjectionNonLinDynamic.C
  UDEIMPodProjectionNonLinDynamic.C
  SparseNonNegativeLeastSquaresSolverInstance.C
  ParallelSparseNonNegativeLeastSquaresSolver.C
  NodalRestrictionMapping.C
  MappedNodeDof6Buffer.C
  MeshOutput.C
  MeshDesc.C
  ModalGeomState.C
  PodProjectionNonLinDynamic.C
  SnapshotProjectionDriver.C
  RenumberingUtils.C
  RestrictedVecNodeDof6Conversion.C
  SnapshotNonLinDynamic.C
  SvdOrthogonalization.C
  VecBasis.C
  VecBasisFile.C
  VecBasisUtils.C
  VecNodeDof6Conversion.C
  VecNodeDof6Map.C
  DofSetUtils.C
  LawsonHanson.d/diff.f
  LawsonHanson.d/g1.f
  LawsonHanson.d/h12.f
  LawsonHanson.d/spnnls.f
  SDDynamPodPostProcessor.C
  EiGalerkinProjectionSolverInstance.C
  DirectionalPursuit.d/nncgp.C
  DirectionalPursuit.d/pnncgp.C
  PolytopeFacesPursuit.d/pgpfp.C
  PolytopeFacesPursuit.d/gpfp.C
  LARS.d/lars.C
)
