ADD_LIBRARY( Rom
  BasisBinaryFile.C
  BasisId.C
  BasisFileStream.C
  BasisInputFile.C
  BasisOutputFile.C
  BasisOrthoDriver.C
  DEIMSamplingDriver.C 
  UDEIMSamplingDriver.C
  CheckNonLinDynamic.C
  CholeskyUtils.C
  DistrBasisFile.C
  DistrBasisOrthoDriver.C
  DistrElementSamplingDriver.C
  DistrSnapshotNonLinDynamic.C
  DistrExplicitSnapshotNonLinDynamic.C
  DistrExplicitPodProjectionNonLinDynamicBase.C
  DistrExplicitPodProjectionNonLinDynamic.C
  DistrExplicitLumpedPodProjectionNonLinDynamic.C
  DistrExplicitDEIMPodProjectionNonLinDynamic.C
  DistrExplicitUDEIMPodProjectionNonLinDynamic.C
  DistrROMPostProcessingDriver.C
  DistrNodeDof6Buffer.C
  DistrVecBasis.C
  DistrSvdOrthogonalization.C
  DistrVecNodeDof6Conversion.C
  ElementSamplingDriverInstance.C
  FileNameInfo.C
  SubElementSamplingDriver.C
  LumpedPodProjectionNonLinDynamic.C
  DEIMPodProjectionNonLinDynamic.C
  UDEIMPodProjectionNonLinDynamic.C
  SparseNonNegativeLeastSquaresSolverInstance.C
  ParallelSparseNonNegativeLeastSquaresSolver.C
  NodalRestrictionMapping.C
  MappedNodeDof6Buffer.C
  MeshOutput.C
  MeshDesc.C
  ModalGeomState.C
  PodProjectionNonLinDynamic.C
  SnapshotProjectionDriver.C
  RenumberingUtils.C
  RestrictedVecNodeDof6Conversion.C
  SnapshotNonLinDynamic.C
  SvdOrthogonalization.C
  VecBasis.C
  VecBasisFile.C
  VecBasisUtils.C
  VecNodeDof6Conversion.C
  VecNodeDof6Map.C
  DofSetUtils.C
  SparseSolvers.d/LawsonHanson.d/diff.f
  SparseSolvers.d/LawsonHanson.d/g1.f
  SparseSolvers.d/LawsonHanson.d/h12.f
  SparseSolvers.d/LawsonHanson.d/spnnls.f
  SDDynamPodPostProcessor.C
  EiGalerkinProjectionSolverInstance.C
  SparseSolvers.d/DirectionalPursuit.d/nncgp.C
  SparseSolvers.d/DirectionalPursuit.d/pnncgp.C
  SparseSolvers.d/PolytopeFacesPursuit.d/pgpfp.C
  SparseSolvers.d/PolytopeFacesPursuit.d/gpfp.C
  SparseSolvers.d/LARS.d/lars.C
  SparseSolvers.d/MatchingPursuits.d/mp.C
  SparseSolvers.d/OrthogonalMatchingPursuits.d/omp.C
  SparseSolvers.d/OrthogonalMatchingPursuits.d/pomp.C
)
